Backport upgrades, EMI Integration and Jade Integration from 1.20

--- a/src/main/resources/assets/yacg/lang/en_us.json
+++ b/src/main/resources/assets/yacg/lang/en_us.json
@@ -1,7 +1,15 @@
 {
   "itemGroup.yacg.generator": "Generator",
-
   "block.yacg.cobble": "Cobble Generator",
   "block.yacg.ore": "Ore Generator",
-  "block.yacg.stone": "Stone Generator"
+  "block.yacg.stone": "Stone Generator",
+  "item.yacg.hidden.tooltip": "Press [%s] to see additional info",
+  "item.yacg.upgrade_speed": "Upgrade: Speed",
+  "item.yacg.upgrade_speed.tooltip": "Divide delay by %s between generations",
+  "item.yacg.upgrade_coefficient": "Upgrade: Coefficient",
+  "item.yacg.upgrade_coefficient.tooltip": "Multiply chance by %s for generations that below 50%s",
+  "item.yacg.upgrade_count": "Upgrade: Count",
+  "item.yacg.upgrade_count.tooltip": "Multiply generations count by %s",
+  "emi.category.yacg.generators": "Resource Generators",
+  "config.jade.plugin_yacg.generators": "YACG Plugin"
 }
