Update and cleanup

--- a/src/main/resources/assets/yacg/lang/pl_pl.json
+++ b/src/main/resources/assets/yacg/lang/pl_pl.json
@@ -9,5 +9,5 @@
   "item.yacg.upgrade_coefficient.tooltip": "Pomnóż szanse generacji przez %s dla generacji które sa poniżej 50%s",
   "item.yacg.upgrade_count": "Ulepszenie: Liczba",
   "item.yacg.upgrade_count.tooltip": "Pomnoż liczbe generacji przez %s",
-  "emi.category.yacg.generators": "Generatory Zasobów",
+  "emi.category.yacg.generators": "Generatory Zasobów"
 }
